--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@dnd-kit/core": "^6.1.0",
     "antd": "^5.12.8",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
